<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorText">

        <TextView
            android:id="@+id/txtVtituloServEsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/strServiciosServEsc"
            android:textColor="@color/colorPrimaryText"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtVhorariosServEsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/strServEscHorario"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/txtVtituloServEsc"
            />

        <TextView
            android:id="@+id/txtVhorasServEsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/strServEscHoras"
            android:textColor="@color/colorPrimaryText"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/txtVhorariosServEsc"
            />

        <Button
            android:id="@+id/btnServEscConstancias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimary"
            android:text="@string/strServEscConstancias"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/txtVhorasServEsc"
            />

        <Button
            android:id="@+id/btnServEscTramites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/strServEscTramites"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/btnServEscConstancias" />

        <Button
            android:id="@+id/btnServEscTiempos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/strServEscTiempos"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/btnServEscTramites" />

        <Button
            android:id="@+id/btnServEscID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/strServEscID"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/btnServEscTiempos" />

        <Button
            android:id="@+id/btnServEscRevision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/strServEscRevision"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/btnServEscID" />

        <Button
            android:id="@+id/btnServEscInconcl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/strServEscInconcl"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/btnServEscRevision" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>