<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorText">

        <!-- Fragmento de registro UNAMigo -->

        <TextView
            android:id="@+id/regTxvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/strRegistrar"
            android:textColor="@color/colorPrimaryText"
            android:textSize="50sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />


        <EditText
            android:id="@+id/regEdtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/strNombre"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regTxvTitulo" />


        <EditText
            android:id="@+id/regEdtCarrera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/strCarrera"
            android:inputType="text"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regEdtNombre" />

        <EditText
            android:id="@+id/regEdtNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/strNumero"
            android:inputType="number"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regEdtCarrera" />

        <EditText
            android:id="@+id/regEdtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/strCorreo"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regEdtNumero"/>

        <EditText
            android:id="@+id/regEdtCorreo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/strVuelveIngresarCorreo"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regEdtCorreo"/>

        <TextView
            android:id="@+id/regTxvSubir"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/strEsNecesario"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regEdtCorreo2" />

        <Button
            android:id="@+id/regBtnElegirFoto"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorLightPrimary"
            android:text="@string/strElegirFoto"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regTxvSubir" />

        <Button
            android:id="@+id/regBtnRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/strRegistrarse"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/regBtnElegirFoto"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>