<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorText">

        <TextView
            android:id="@+id/txtVtituloASDRI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/strServiciosASDRI"
            android:textColor="@color/colorPrimaryText"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtVcalendarioASDRI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/strASDRICalendario"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/txtVtituloASDRI"
            />

        <ImageButton
            android:id="@+id/imgBcalendarioASDRI"
            android:layout_width="402dp"
            android:layout_height="181dp"
            android:layout_marginTop="36dp"
            android:scaleType="fitCenter"
            android:src="@drawable/calendario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVcalendarioASDRI" />

        <TextView
            android:id="@+id/txtVinfoASDRI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/strASDRIInfo"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/imgBcalendarioASDRI"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
